<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="63dp"
        android:background="#fff"
        android:onClick="gotoLogin"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="#fff"
        android:onClick="gotoRegister"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/to"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:text="@string/entidades_online"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

</RelativeLayout>