<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:layout_marginTop="23dp"
        android:text="@string/speciality"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/button5"
        android:layout_marginEnd="26dp"
        android:layout_toStartOf="@+id/password_doctor"
        android:background="@color/colorPrimary"
        android:onClick="finishDoctorRegistration"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@+id/password_doctor"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="42dp"
        android:background="@color/colorPrimary"
        android:onClick="LoginDoctorRegistration"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/license"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/textView16"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/textView16"
        android:background="@color/white"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/password_doctor"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/uname_doc"
        android:layout_alignTop="@+id/textView19"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary" />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/sthethoscope"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:layout_marginStart="13dp"
        android:contentDescription="Estetoscopio" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView17"
        android:layout_alignStart="@+id/textView17"
        android:layout_marginTop="20dp"
        android:text="@string/clinic_address"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:layout_marginTop="21dp"
        android:text="@string/password"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/clinic"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/license"
        android:layout_alignTop="@+id/textView10"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/uname_doc"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/clinic"
        android:layout_alignTop="@+id/textView18"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/textView17"
        android:layout_marginTop="13dp"
        android:text="@string/kindly_complete_the_following_form"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lname_doc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/dropDown"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_above="@+id/textView10"
        android:layout_alignStart="@+id/clinic"
        android:dropDownWidth="150dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/license_number"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

</RelativeLayout>