<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="8dip">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:text="@string/app_label"
            android:textColor="@color/white"
            android:textSize="30dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5sp">

        <TextView
            android:id="@+id/firstname"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingRight="5dp"
            android:text="@string/firstname_label"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="20dp" />1

        <EditText
            android:id="@+id/firstnameET"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/firstname"
            android:layout_weight="60"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="5sp">

        <TextView
            android:id="@+id/lastname"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingRight="5dp"
            android:text="@string/lastname_label"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/lastnameET"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/lastname"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="5sp">

        <TextView
            android:id="@+id/emailId"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingLeft="20dp"
            android:paddingRight="5dp"
            android:text="@string/EmailID_label"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/emailIdET"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/emailId"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="5sp">

        <TextView
            android:id="@+id/contact"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingLeft="20dp"
            android:paddingRight="5dp"
            android:text="@string/Contact_label"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/contactET"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/contact"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="5sp">

        <TextView
            android:id="@+id/address"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingRight="5dp"
            android:text="@string/Address_label"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/addressET"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/address"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="5sp">

        <TextView
            android:id="@+id/relation"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingRight="5dp"
            android:text="@string/relation_label"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/relationET"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/relation"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/addECBtn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:onClick="addEmergencyContact"
            android:text="@string/btn_add_label"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/backECBtn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:onClick="backFromAddEC"
            android:text="BACK"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>

